--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
-  "name": "express-test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
-  },
-  "engines": {
-    "node": "8.11.4"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "test",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bcrypt": "^3.0.2",
-    "compression": "^1.7.3",
-    "express": "^4.16.4",
-    "express-fileupload": "^1.0.0",
-    "helmet": "^3.15.0",
-    "joi": "^14.3.0",
-    "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.3.15",
-    "morgan": "^1.9.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "uuid": "^3.3.2"
-  }
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
+    "joi-browser": "^13.4.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "popper.js": "^1.14.4",
+    "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
+    "react": "^16.4.2",
+    "react-body-backgroundcolor": "^1.2.1",
+    "react-confirm-alert": "^2.0.6",
+    "react-csv": "^1.0.18",
+    "react-datetime": "^2.16.2",
+    "react-dom": "^16.4.2",
+    "react-fontawesome": "^1.6.1",
+    "react-loader-spinner": "^2.0.6",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.0.4",
+    "react-table": "^6.8.6",
+    "react-toastify": "^4.3.1",
+    "react-tooltip": "^3.9.0",
+    "request-promise": "^4.2.2",
+    "rimraf": "^2.6.2"
+  },
+  "scripts": {
+    "start": "rimraf ./build && react-scripts start",
+    "build": "react-scripts build",
+    "postbuild": "rimraf build/**/*.map",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
